[gd_scene load_steps=35 format=3 uid="uid://kuitpekwq8ad"]

[ext_resource type="Script" path="res://scripts/puzzle_level.gd" id="1_r0uyx"]
[ext_resource type="Shader" path="res://shaders2/glitch.gdshader" id="2_0dev6"]
[ext_resource type="PackedScene" uid="uid://dv3roeahxoy5c" path="res://scenes/orb pickup.tscn" id="3_3kp3u"]
[ext_resource type="PackedScene" uid="uid://bbmg1ilvaf0c3" path="res://scenes/recharge.tscn" id="4_kr8un"]
[ext_resource type="PackedScene" uid="uid://ba2i2wwf41i1j" path="res://dialogue/mainDialogueBalloon.tscn" id="5_ytuvg"]
[ext_resource type="PackedScene" uid="uid://d2w5c2h235yb1" path="res://scenes/screwdriver.tscn" id="6_f7po2"]
[ext_resource type="PackedScene" uid="uid://5cmhxaqrwwl2" path="res://scenes/firework box.tscn" id="7_xxg3b"]
[ext_resource type="PackedScene" uid="uid://cmr7ce7r5yhcw" path="res://scenes/newWindow.tscn" id="8_8engw"]
[ext_resource type="PackedScene" uid="uid://cajsurwtjwfbx" path="res://scenes/classroom.tscn" id="9_qo4wv"]
[ext_resource type="PackedScene" uid="uid://bhmxohy5kpk3h" path="res://scenes/safe zone.tscn" id="10_i2wmg"]
[ext_resource type="PackedScene" uid="uid://7prn1reuulcn" path="res://assets/wallsfloordoorByStylooGltfFbx/gltf/wall_003.glb" id="10_yu1gc"]
[ext_resource type="PackedScene" uid="uid://blv6n6bcamb52" path="res://scenes/matchbox.tscn" id="11_4tw2i"]
[ext_resource type="Resource" uid="uid://cpo6iyyl5y4tm" path="res://item/items/matchbox.tres" id="12_inylm"]
[ext_resource type="PackedScene" uid="uid://cgusmq7mhjgg5" path="res://scenes/bird_flying.tscn" id="13_k0ega"]
[ext_resource type="PackedScene" uid="uid://ihrx7hp7voac" path="res://scenes/orb fall.tscn" id="14_2d0g7"]
[ext_resource type="Script" path="res://scripts/key.gd" id="15_crcn3"]
[ext_resource type="Resource" uid="uid://djlv0rrmugyb4" path="res://item/items/key.tres" id="16_pchfk"]
[ext_resource type="PackedScene" uid="uid://b2828mjf3waoo" path="res://scenes/key.tscn" id="17_pdulb"]
[ext_resource type="Script" path="res://item/collectibles/static_body_3d_2.gd" id="18_dya0i"]
[ext_resource type="Resource" uid="uid://jy81xqfcmvey" path="res://item/collectibles/test_collectible.tres" id="19_w73tg"]
[ext_resource type="AudioStream" uid="uid://blfjjhb5gyki" path="res://assets/sounds/fireworks.wav" id="21_mp04g"]
[ext_resource type="PackedScene" uid="uid://d2ck6rr5j0kl8" path="res://scenes/essence.tscn" id="22_0wenb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_43lwf"]
render_priority = 0
shader = ExtResource("2_0dev6")
shader_parameter/albedo = null
shader_parameter/specular = 19.94
shader_parameter/metallic = null
shader_parameter/alpha_scissor_threshold = 0.0
shader_parameter/roughness = 0.0
shader_parameter/point_size = 0.0
shader_parameter/uv1_scale = null
shader_parameter/uv1_offset = null
shader_parameter/uv2_scale = null
shader_parameter/uv2_offset = null
shader_parameter/speed = 5.0
shader_parameter/frequency_uniform = 30.0
shader_parameter/is_breath = false
shader_parameter/breath_speed = 0.368
shader_parameter/breath_freq = 0.021

[sub_resource type="SphereMesh" id="SphereMesh_5lchi"]
material = SubResource("ShaderMaterial_43lwf")

[sub_resource type="SphereShape3D" id="SphereShape3D_0qgsr"]
radius = 4.0

[sub_resource type="BoxShape3D" id="BoxShape3D_ssqgr"]
size = Vector3(0.740723, 0.40532, 0.704309)

[sub_resource type="BoxMesh" id="BoxMesh_jnwdn"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_i5c07"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="Animation" id="Animation_mfti5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bird&all:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(3.20754, 3.38889, 11.6341)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bird&all/OrbPickup2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bird&all/birdFlying:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bird&all/OrbPickup2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("OrbPickup:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("bird&all/birdFlying:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Recharge:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_27gnm"]
resource_name = "intro"
length = 6.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("bird&all")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array()
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("bird&all/OrbPickup2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array()
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("bird&all/birdFlying")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array()
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bird&all:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(3.20754, 3.38889, 11.6341), Vector3(-4.20815, 3.40301, 1.87672)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("OrbPickup:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.06667, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("bird&all/OrbPickup2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3.06667, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("bird&all/birdFlying:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(5.9, 5.93333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Recharge:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(5.9, 5.93333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("bird&all/OrbPickup2:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(2.5, 3.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.00641775, -1.90822, 0.065052)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("bird&all/birdFlying:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(2.5, 5.9),
"transitions": PackedFloat32Array(0.63728, 0.63728),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-10.7681, -3.58295, -12.9863)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_10bo8"]
_data = {
"RESET": SubResource("Animation_mfti5"),
"intro": SubResource("Animation_27gnm")
}

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_qrfv0"]

[sub_resource type="Sky" id="Sky_rb3v5"]
sky_material = SubResource("PhysicalSkyMaterial_qrfv0")

[sub_resource type="Environment" id="Environment_n5k3m"]
background_mode = 1
background_color = Color(1, 0.431373, 0, 1)
background_energy_multiplier = 0.5
sky = SubResource("Sky_rb3v5")
ssao_enabled = true
ssil_enabled = true
sdfgi_enabled = true
glow_enabled = true
volumetric_fog_density = 0.0169
volumetric_fog_albedo = Color(1, 0.433333, 0, 1)

[node name="puzzle_level" type="Node3D"]
transform = Transform3D(0.999983, -0.00319816, 0.00483952, 0.00336122, 0.999414, -0.0340702, -0.00472772, 0.0340859, 0.999408, -3, 0, -12)
script = ExtResource("1_r0uyx")
balloon = ExtResource("5_ytuvg")

[node name="sphere" type="MeshInstance3D" parent="."]
transform = Transform3D(0.999983, 0.00336122, -0.00472772, -0.00319815, 0.999414, 0.0340859, 0.00483952, -0.0340702, 0.999407, 9.01494, 2.53486, 14.9219)
layers = 3
mesh = SubResource("SphereMesh_5lchi")
skeleton = NodePath("")

[node name="OrbPickup" parent="." instance=ExtResource("3_3kp3u")]
transform = Transform3D(0.999983, 0.00336122, -0.00472772, -0.00319815, 0.999414, 0.0340859, 0.00483952, -0.0340702, 0.999407, -4.21458, 1.49178, 1.94187)
visible = false

[node name="Recharge" parent="." instance=ExtResource("4_kr8un")]
transform = Transform3D(0.830629, 0.00336122, 0.556816, -0.0217614, 0.999414, 0.0264295, -0.556401, -0.0340702, 0.830215, -15.2616, -0.371921, -11.4325)
visible = false
collision_layer = 3
balloon = ExtResource("5_ytuvg")

[node name="screwdriver" parent="." instance=ExtResource("6_f7po2")]
transform = Transform3D(-0.0883198, 0.0173086, -0.000160533, -0.000292956, -0.0023293, -0.0899694, -0.0173068, -0.0882892, 0.00234216, -48.7898, 0.87512, -2.9941)

[node name="OmniLight3D" type="OmniLight3D" parent="screwdriver"]
transform = Transform3D(11.1111, 6.19888e-06, -1.67638e-08, 0, 11.1111, -4.47035e-08, -3.72529e-09, -2.98023e-08, 11.1111, -0.0699463, 2.13206, -0.960154)
omni_range = 0.458723

[node name="fireworks" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_mp04g")

[node name="FireworkBox" parent="." instance=ExtResource("7_xxg3b")]
transform = Transform3D(0.999983, 0.00336122, -0.00472772, -0.00319815, 0.999414, 0.0340859, 0.00483952, -0.0340702, 0.999407, 9.18577, -0.893167, -25.2939)
balloon = ExtResource("5_ytuvg")

[node name="fireworkMarker" type="Marker3D" parent="."]
transform = Transform3D(1, -8.73115e-10, 0, -1.16415e-10, 1, 0, 0, -1.49012e-08, 1, -38.9054, -0.904339, -27.8245)

[node name="Window" parent="." instance=ExtResource("8_8engw")]
transform = Transform3D(1.49998, 0.00504184, -0.00709158, -0.00479723, 1.49912, 0.0511288, 0.00725928, -0.0511053, 1.49911, -38.8703, -0.849843, -28.8149)

[node name="classroom" parent="." instance=ExtResource("9_qo4wv")]
transform = Transform3D(1.49998, 0.00504184, -0.00709158, -0.00479723, 1.49912, 0.0511288, 0.00725928, -0.0511053, 1.49911, 0, 0, 0)

[node name="CHEMISTRYglobe_12" parent="classroom" index="2"]
visible = false

[node name="Ceiling" parent="classroom" index="11"]
visible = true

[node name="wall_0115" parent="classroom/Ceiling/wall_0115" index="1" instance=ExtResource("10_yu1gc")]
transform = Transform3D(-1, 9.61151e-08, -1.17322e-07, -9.61151e-08, -1, -1.18564e-07, -1.17322e-07, -1.18564e-07, 1, -2, 12, 0)

[node name="wall_0123" parent="classroom/Ceiling/wall_0115" index="2" instance=ExtResource("10_yu1gc")]
transform = Transform3D(-1, 9.61151e-08, -1.17322e-07, -9.61151e-08, -1, -1.18564e-07, -1.17322e-07, -1.18564e-07, 1, -2, 9.99998, -2.86102e-06)

[node name="wall_0131" parent="classroom/Ceiling/wall_0115" index="3" instance=ExtResource("10_yu1gc")]
transform = Transform3D(-1, 9.61151e-08, -1.17322e-07, -9.61151e-08, -1, -1.18564e-07, -1.17322e-07, -1.18564e-07, 1, -2, 7.99999, -3.09944e-06)

[node name="wall_0139" parent="classroom/Ceiling/wall_0115" index="4" instance=ExtResource("10_yu1gc")]
transform = Transform3D(-1, 9.61151e-08, -1.17322e-07, -9.61151e-08, -1, -1.18564e-07, -1.17322e-07, -1.18564e-07, 1, -2, 5.99999, -2.86102e-06)

[node name="wall_0147" parent="classroom/Ceiling/wall_0115" index="5" instance=ExtResource("10_yu1gc")]
transform = Transform3D(-1, 9.61151e-08, -1.17322e-07, -9.61151e-08, -1, -1.18564e-07, -1.17322e-07, -1.18564e-07, 1, -2, 4, -1.19209e-06)

[node name="wall_0155" parent="classroom/Ceiling/wall_0115" index="6" instance=ExtResource("10_yu1gc")]
transform = Transform3D(-1, 9.61151e-08, -1.17322e-07, -9.61151e-08, -1, -1.18564e-07, -1.17322e-07, -1.18564e-07, 1, -2, 2.00001, -1.43051e-06)

[node name="wall_0163" parent="classroom/Ceiling/wall_0115" index="7" instance=ExtResource("10_yu1gc")]
transform = Transform3D(-1, 9.61151e-08, -1.17322e-07, -9.61151e-08, -1, -1.18564e-07, -1.17322e-07, -1.18564e-07, 1, -2, 2.0504e-05, -1.66893e-06)

[node name="Light" type="OmniLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.999983, 0.00336122, -0.00472772, -0.00319815, 0.999414, 0.0340859, 0.00483952, -0.0340702, 0.999407, 9.0109, -0.497821, -24.1834)
light_energy = 30.0

[node name="safe zone" parent="Light" instance=ExtResource("10_i2wmg")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Light/safe zone"]
shape = SubResource("SphereShape3D_0qgsr")

[node name="matchbox" parent="." groups=["items"] instance=ExtResource("11_4tw2i")]
transform = Transform3D(-0.0295423, 0.000100835, 0.00521915, -7.85783e-05, 0.0299824, -0.00102405, -0.00521953, -0.0010221, -0.0295247, 12.8938, 1.67492, 10.4263)
item_data = ExtResource("12_inylm")

[node name="OmniLight3D" type="OmniLight3D" parent="matchbox"]
transform = Transform3D(11.1111, 6.19888e-06, -1.67638e-08, 0, 11.1111, -4.47035e-08, -3.72529e-09, -2.98023e-08, 11.1111, -0.0699463, 2.13206, -0.960154)
omni_range = 0.458723

[node name="bird&all" type="Node3D" parent="."]
transform = Transform3D(1, -2.80852e-09, 0, -1.16415e-10, 1, 0, 0, -4.84288e-08, 1, 3.20754, 3.38889, 11.6341)

[node name="birdFlying" parent="bird&all" instance=ExtResource("13_k0ega")]
transform = Transform3D(0.790845, -0.439962, 0.42544, -0.0235082, 0.672793, 0.739457, -0.611566, -0.594796, 0.521732, 0, 0, 0)

[node name="OrbPickup2" parent="bird&all" instance=ExtResource("14_2d0g7")]
transform = Transform3D(0.999983, 0.00336122, -0.00472772, -0.00319815, 0.999414, 0.0340859, 0.00483953, -0.0340702, 0.999407, 0, 0, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="." groups=["interactable", "items"]]
transform = Transform3D(0.999983, 0.00336122, -0.00472772, -0.00319815, 0.999414, 0.0340859, 0.00483952, -0.0340702, 0.999407, -25.9572, -0.315966, -30.386)
script = ExtResource("15_crcn3")
item_data = ExtResource("16_pchfk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(0.928057, 0, -0.372437, 0, 1, 0, 0.372437, 0, 0.928057, 0.0145874, 0.25426, -0.0363483)
shape = SubResource("BoxShape3D_ssqgr")

[node name="key" parent="StaticBody3D" instance=ExtResource("17_pdulb")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)

[node name="testCollectible" type="StaticBody3D" parent="." groups=["collectible", "interactable"]]
transform = Transform3D(0.999983, 0.00336122, -0.00472772, -0.00319815, 0.999414, 0.0340859, 0.00483952, -0.0340702, 0.999407, -27.0623, -0.943664, -30.3513)
script = ExtResource("18_dya0i")
item_data = ExtResource("19_w73tg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="testCollectible"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.487617, 0)
mesh = SubResource("BoxMesh_jnwdn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="testCollectible"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.487617, 0)
shape = SubResource("ConcavePolygonShape3D_i5c07")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_10bo8")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n5k3m")

[node name="StaticBody3D2" parent="." instance=ExtResource("22_0wenb")]
transform = Transform3D(0.5, -8.65839e-10, 0, -5.82077e-11, 0.5, 0, 0, -1.49012e-08, 0.5, 7.30107, 1.24524, 9.96822)

[node name="Node3D" parent="." instance=ExtResource("22_0wenb")]
transform = Transform3D(0.5, -6.4756e-10, 0, -5.82077e-11, 0.5, 0, 0, -1.11759e-08, 0.5, 7.30683, 1.2037, 8.75012)

[editable path="Window"]
[editable path="classroom"]
[editable path="classroom/Desks/chair113"]
